# dtc-ml-zoomcamp-midterm-project

./: .gitignore  Dockerfile  Makefile  README.md  notebook.ipynb  pyproject.toml
model/: trained_model.json
scripts/: train.py
server/: app.py
